force-app/main/default/objects/Log_Archive__c/Log_Archive__c.object-meta.xml
<CustomObject>
    <label>Log Archive</label>
    <nameField>
        <label>Log Archive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Log Archives</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>