force-app/main/default/objects/Log_Archive__c/fields/Archive_Data__c.field-meta.xml
<CustomField>
    <fullName>Archive_Data__c</fullName>
    <description>Compressed log data in JSON format</description>
    <label>Archive Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>