force-app/main/default/objects/Log_Archive__c/fields/Archive_Date__c.field-meta.xml
<CustomField>
    <fullName>Archive_Date__c</fullName>
    <description>When archive was created</description>
    <label>Archive Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>