force-app/main/default/objects/Log_Archive__c/fields/Archive_Status__c.field-meta.xml
<CustomField>
    <fullName>Archive_Status__c</fullName>
    <label>Archive Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>IN_PROGRESS</fullName>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
            <value>
                <fullName>RESTORED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>