force-app/main/default/objects/Log_Archive__c/fields/Checksum__c.field-meta.xml
<CustomField>
    <fullName>Checksum__c</fullName>
    <description>Data integrity checksum</description>
    <label>Checksum</label>
    <length>64</length>
    <type>Text</type>
</CustomField>