force-app/main/default/objects/Log_Archive__c/fields/Compressed_Size_KB__c.field-meta.xml
<CustomField>
    <fullName>Compressed_Size_KB__c</fullName>
    <description>Size after compression</description>
    <label>Compressed Size KB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>