force-app/main/default/objects/Log_Archive__c/fields/Compression_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Compression_Ratio__c</fullName>
    <description>Compression ratio achieved</description>
    <label>Compression Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>