force-app/main/default/objects/Log_Archive__c/fields/Original_Log_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Log_ID__c</fullName>
    <description>Reference to original log entry</description>
    <label>Original Log ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>