force-app/main/default/objects/Log_Archive__c/fields/Original_Size_KB__c.field-meta.xml
<CustomField>
    <fullName>Original_Size_KB__c</fullName>
    <description>Original size before compression</description>
    <label>Original Size KB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>